--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
 .grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-rows: repeat(13, 1fr);
     row-gap: 20px;
 }
 
@@ -118,6 +118,7 @@ body {
     flex-direction: column;
     font-weight: bold;
     width: 60px;
+    gap: 10px;
     text-align: center;
 }
 
@@ -128,12 +129,51 @@ body {
 
 /* Skills */
 
+/* Skills Info */
+
+.card-skill {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-skill-icon {
+    height: 25px;
+    width: 25px;
+}
+
+.info-header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.info-title {
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+.info-item {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.info-item-image {
+    width: 20px;
+    height: 20px;
+}
+
+/* Skills Info */
+
+
 /* Projects */
 
 .project-title {
     text-align: center;
     font-weight: 700;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .project-gif {
