--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 .container {
     max-width: 360px;
     width: 100%;
-    margin: 0 auto;
+    margin: 0 auto 20px auto;
 }
 
 /* HEADER START */
@@ -293,5 +293,50 @@ body {
     }
     .card-project {
         max-height: 684px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1102px;
+    }
+    .card {
+        max-width: 290px;
+        max-height: 290px;
+    }
+    .grid {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+    }
+    #introduction {
+        max-width: 662px;
+    }
+    .intro-greeting {
+        font-size: 2rem;
+    }
+    .intro-heading {
+        font-size: 3.5rem;
+    }
+    .intro-info {
+        font-size: 1.5rem;
+    }
+    .card-project {
+        max-height: 662px;
+    }
+}
+
+@media (min-width: 1576px) {
+    .container {
+        max-width: 1476px;
+    }
+    .grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+    #github {
+        grid-area: 1 / 3 / 2/ 4;
+    }
+    #linkedin {
+        grid-area: 1 / 4 / 2/ 5;
     }
 }
