--- a/styles.css
+++ b/styles.css
@@ -211,6 +211,12 @@ body {
     padding: 4px;
     background: linear-gradient(45deg, #419AF2, #4FA9F2, #5EB9F1, #6CC8F1, #7BD8F0, #89E7F0);
     border-radius: 100px;
+    transition: all 0.3s
+}
+
+.button-link:hover {
+    box-shadow: 0.2rem 0.4rem 1.2rem rgba(0, 0, 0, 0.08);
+    transform: scale(1.04);
 }
 
 .button-link > a {
@@ -228,12 +234,160 @@ body {
 
 /* Projects */
 
+/* Media */
+
 .media-icon {
     height: 100%;
     width: 100%;
 }
 
+/* Media */
+
 /* MAIN END */
+
+/* Filter Effects */
+
+#introduction,
+#skills,
+.card-skill,
+.card-project,
+.card-media,
+.filter {
+    transition: all 0.3s
+}
+
+#introduction.unhighlight,
+#skills.unhighlight,
+.card-skill.unhighlight,
+.card-project.unhighlight,
+.card-media.unhighlight {
+    opacity: 0.4;
+}
+
+/* Window innerWidth < 750 */
+
+#project-1.highlight-s {
+    grid-area: 1 / 1 / span 2 / 2;
+}
+
+#project-2.highlight-s {
+    grid-area: 3 / 1 / span 2 / 2;
+}
+
+#project-3.highlight-s {
+    grid-area: 5 / 1 / span 2 / 2;
+}
+
+#project-4.highlight-s {
+    grid-area: 7 / 1 / span 2 / 2;
+}
+
+#github.highlight-s {
+    grid-area: 1 / 1 / 2/ 2;
+}
+
+#linkedin.highlight-s {
+    grid-area: 2 / 1 / 3/ 2;
+}
+
+/* Window innerWidth >= 750 && < 1200 */
+
+#project-1.highlight-m {
+    grid-area: 1 / 1 / span 2 / 2;
+}
+
+#project-2.highlight-m {
+    grid-area: 1 / 2 / span 2 / 3;
+}
+
+#project-3.highlight-m {
+    grid-area: 3 / 1 / span 2 / 2;
+}
+
+#project-4.highlight-m {
+    grid-area: 3 / 2 / span 2 / 3;
+}
+
+#github.highlight-m {
+    grid-area: 1 / 1 / 2/ 2;
+}
+
+#linkedin.highlight-m {
+    grid-area: 1 / 2 / 2/ 3;
+}
+
+/* Window innerWidth >= 1200 && < 1576 */
+
+#project-1.highlight-l {
+    grid-area: 1 / 1 / span 2 / 2;
+}
+
+#project-2.highlight-l {
+    grid-area: 1 / 2 / span 2 / 3;
+}
+
+#project-3.highlight-l {
+    grid-area: 1 / 3 / span 2 / 4;
+}
+
+#project-4.highlight-l {
+    grid-area: 3 / 1 / span 2 / 2;
+}
+
+#github.highlight-l {
+    grid-area: 1 / 1 / 2/ 2;
+}
+
+#linkedin.highlight-l {
+    grid-area: 1 / 2 / 2/ 3;
+}
+
+#skills.highlight-media-l {
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+/* Window innerWidth >= 1576 */
+
+#project-1.highlight-xl {
+    grid-area: 1 / 1 / span 2 / 2;
+}
+
+#project-2.highlight-xl {
+    grid-area: 1 / 2 / span 2 / 3;
+}
+
+#project-3.highlight-xl {
+    grid-area: 1 / 3 / span 2 / 4;
+}
+
+#project-4.highlight-xl {
+    grid-area: 1 / 4 / span 2 / 5;
+}
+
+#github.highlight-about-xl {
+    grid-area: 2 / 3 / 3/ 4;
+}
+
+#linkedin.highlight-about-xl {
+    grid-area: 2 / 4 / 3/ 5;
+}
+
+#github.highlight-project-xl {
+    grid-area: 3 / 3 / 4/ 4;
+}
+#linkedin.highlight-project-xl {
+    grid-area: 3 / 4 / 4/ 5;
+}
+
+#github.highlight-media-xl {
+    grid-area: 1 / 1 / 2/ 2;
+}
+
+#linkedin.highlight-media-xl {
+    grid-area: 1 / 2 / 2/ 3;
+}
+
+/* Filter Effects End */
 
 /* MEDIA QUERIES */
 @media (min-width: 481px) {
