--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "system-ui", sans-serif;
+    font-family: 'Segoe UI', sans-serif;
     color: #1D1D1D;
     background-color: #F5F5F5;
 }
